# vesa

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/vesa-capture/: Cargo.toml
crates/vesa-capture/src/: lib.rs  linux.rs  macos.rs  windows.rs
crates/vesa-cli/: Cargo.toml
crates/vesa-cli/src/: main.rs
crates/vesa-core/: Cargo.toml
crates/vesa-core/src/: client.rs  config.rs  edge.rs  lib.rs  server.rs
crates/vesa-emulate/: Cargo.toml
crates/vesa-emulate/src/: lib.rs  linux.rs  macos.rs  windows.rs
crates/vesa-event/: Cargo.toml
crates/vesa-event/src/: lib.rs
crates/vesa-net/: Cargo.toml
crates/vesa-net/src/: cert.rs  lib.rs
crates/vesa-net/tests/: loopback.rs
crates/vesa-proto/: Cargo.toml
crates/vesa-proto/src/: lib.rs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/lib/: ClientView.svelte  ScreenLayout.svelte  ServerView.svelte  Settings.svelte  StatusBar.svelte
