[package]
name = "vesa-cli"
description = "CLI binary for Vesa software KVM"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
vesa-core = { path = "../vesa-core" }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
vesa-event = { path = "../vesa-event" }
anyhow = "1"
