[package]
name = "vesa-core"
description = "Server and client core logic for Vesa software KVM"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
vesa-event = { path = "../vesa-event" }
vesa-proto = { path = "../vesa-proto" }
vesa-net = { path = "../vesa-net" }
vesa-capture = { path = "../vesa-capture" }
vesa-emulate = { path = "../vesa-emulate" }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
