[package]
name = "vesa-event"
description = "Shared event types for Vesa software KVM"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json = "1"
