[package]
name = "vesa-net"
description = "QUIC transport layer for Vesa software KVM"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
vesa-event = { path = "../vesa-event" }
vesa-proto = { path = "../vesa-proto" }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
ring = "0.17"

[dev-dependencies]
tokio = { workspace = true }
vesa-event = { path = "../vesa-event" }
vesa-proto = { path = "../vesa-proto" }
tempfile = "3"
